[package]
name = "typoglycemia"
version = "1.0.0"
edition = "2024"
rust-version = "1.87.0"
description = """
A function to convert text to typoglycemic format
"""
authors = ["Mark Fehrenbacher <kendopunk@hotmail.com"]
license = "MIT"
keywords = ["typoglycemia", "jumble"]
categories = ["text-processing"]
readme = "README.md"
repository = "https://github.com/kendopunk/typoglycemia-rs.git"
homepage = "https://github.com/kendopunk/typoglycemia-rs"

[dependencies]
atoi = "2.0.0"
rand = "0.9.1"
unicode-segmentation = "1.12.0"
